[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textbox.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.635294, 0.52549, 0.929412, 1 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Assets/BetterPixels.ttf"

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = SubResource( 4 )

[node name="TextBox" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -300.0
margin_right = -30.0
margin_bottom = -30.0
rect_min_size = Vector2( 0, 270 )
rect_pivot_offset = Vector2( 960, 300 )

[node name="Panel" type="Panel" parent="TextContainer"]
margin_right = 1860.0
margin_bottom = 270.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextContainer"]
margin_right = 1860.0
margin_bottom = 270.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="TextContainer/MarginContainer"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1840.0
margin_bottom = 250.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1840.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( -177, -627 )

[node name="LineStart" type="Label" parent="TextContainer/MarginContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 51.0
rect_min_size = Vector2( 16, 0 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "#"

[node name="Label" type="Label" parent="TextContainer/MarginContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 1784.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Text here"
autowrap = true
clip_text = true

[node name="LineEnd" type="Label" parent="TextContainer/MarginContainer/HBoxContainer"]
margin_left = 1788.0
margin_top = 179.0
margin_right = 1820.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 628, -90 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
text = "#"

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
